--- a/roles/minio/install/tasks/main.yml
+++ b/roles/minio/install/tasks/main.yml
@@ -64,10 +64,24 @@
   tags:
     - install  
 
+- name: Configure minio.service
+  template:
+    src: "minio.service.j2"
+    dest: "/etc/systemd/system/minio.service"
+  tags:
+    - install
 
 - name: issue daemon-reload to pick up config changes
   systemd:
     daemon_reload: yes
+  tags:
+    - install  
+
+- name: enable service 
+  service: 
+    name: "minio"
+    enabled: yes
+    state: started
   tags:
     - install  
 
