--- a/inventories/group_vars/elastic.yml
+++ b/inventories/group_vars/elastic.yml
@@ -1,5 +1,3 @@
-data_disk: '/dev/sdb'
-mount_logical_volume: "/data"
-data_path: "/data/elastic"
+data_path: "{{ mount_logical_volume}}/elastic"
 es_host_port: "9200"
 es_transport_port: "9300"
