--- a/inventories/group_vars/minio.yml
+++ b/inventories/group_vars/minio.yml
@@ -3,4 +3,5 @@ mi_group: "minio"
 mi_home: "/opt/minio"
 mi_conf: "/etc/minio"
 mi_port: "9000"
+mi_console_port: "9001"
 mi_data_path: "{{ mount_logical_volume}}/minio"
