--- a/roles/minio/install/tasks/main.yml
+++ b/roles/minio/install/tasks/main.yml
@@ -13,6 +13,7 @@
     name: "{{ mi_user}}"
     comment: MINIO service user
     group: "{{ mi_group}}"
+    shell: "/usr/sbin/nologin"
   tags:
     - install
 
