--- a/roles/elastic/security/tasks/main.yml
+++ b/roles/elastic/security/tasks/main.yml
@@ -10,7 +10,8 @@
     - security
 
 - name: Run command if security does not exist
-  shell: printf "Y"|bin/elasticsearch-setup-passwords auto | grep PASSWORD > "/tmp/{{ es_clustername }}-security"
+#  shell: printf "Y"|bin/elasticsearch-setup-passwords auto | grep PASSWORD > "/tmp/{{ es_clustername }}-security"
+  shell: printf "Y"|bin/elasticsearch-setup-passwords auto 
   args:
     chdir: "/usr/share/elasticsearch"
     creates:  "/tmp/{{ es_clustername }}-security"
