--- a/roles/elastic/security/tasks/main.yml
+++ b/roles/elastic/security/tasks/main.yml
@@ -12,9 +12,20 @@
 - name: Run command if security does not exist
 #  shell: printf "Y"|bin/elasticsearch-setup-passwords auto | grep PASSWORD > "/tmp/{{ es_clustername }}-security"
   shell: printf "Y"|bin/elasticsearch-setup-passwords auto 
+  register: ps
   args:
     chdir: "/usr/share/elasticsearch"
     creates:  "/tmp/{{ es_clustername }}-security"
+  when: security.stat.exists == false
+  tags:
+    - security
+
+- debug: var=ps.stdout_lines
+  when: security.stat.exists == false
+  tags:
+    - security
+
+- debug: var=ps.stderr_lines
   when: security.stat.exists == false
   tags:
     - security
