--- a/roles/elastic/security/tasks/main.yml
+++ b/roles/elastic/security/tasks/main.yml
@@ -11,7 +11,7 @@
 
 - name: Run command if security does not exist
 #  shell: printf "Y"|bin/elasticsearch-setup-passwords auto | grep PASSWORD > "/tmp/{{ es_clustername }}-security"
-  shell: printf "Y"|bin/elasticsearch-setup-passwords auto 
+  shell: printf "Y"|bin/elasticsearch-setup-passwords auto  | grep PASSWORD
   register: ps
   args:
     chdir: "/usr/share/elasticsearch"
