--- a/inventories/group_vars/all.yml
+++ b/inventories/group_vars/all.yml
@@ -1,4 +1,5 @@
 elastic_version: "7.15.2"
+kafka_version: "2.8.1"
 local_install_dir: "/opt/ansible/elastic-install/files"
 remote_install_dir: "/tmp"
 volume_group: 'vg_data'
