--- a/roles/zookeeper/install/tasks/main.yml
+++ b/roles/zookeeper/install/tasks/main.yml
@@ -1,2 +1,103 @@
 ---
 # tasks file for install
+
+- name: Ensure group {{ mi_group}} exists
+  group:
+    name: "{{ mi_group}}"
+    state: present
+  tags:
+    - install
+
+- name: Add the user {{ mi_user}}
+  user:
+    name: "{{ mi_user}}"
+    comment: MINIO service user
+    group: "{{ mi_group}}"
+    shell: "/usr/sbin/nologin"
+  tags:
+    - install
+
+
+- name: create data directory
+  file:
+    path: "{{ mi_data_path}}"
+    state: directory
+    owner: "{{ mi_user }}"
+    group: "{{ mi_group }}"
+  tags:
+    - install
+
+
+- name: create minio home directory
+  file:
+    path: "{{ mi_home}}"
+    state: directory
+    owner: "{{ mi_user}}"
+    group: "{{ mi_group}}"
+  tags:
+    - install
+
+- name: create minio conf directory
+  file:
+    path: "{{ mi_conf}}"
+    state: directory
+    owner: "{{ mi_user}}"
+    group: "{{ mi_group}}"
+  tags:
+    - install
+
+- name: Copy file server
+  copy:
+    src: "{{ local_install_dir}}/minio"
+    dest: "{{ mi_home}}"
+    owner: "{{ mi_user}}"
+    group: "{{ mi_group}}"
+    mode: "+x"
+  tags:
+    - install  
+
+- name: Copy file mc
+  copy:
+    src: "{{ local_install_dir}}/mc"
+    dest: "{{ mi_home}}/mc"
+    owner: "{{ mi_user}}"
+    group: "{{ mi_group}}"
+    mode: "+x"
+  tags:
+    - install  
+
+
+- name: Populate service facts
+  service_facts:    
+  tags:
+    - install  
+
+- name: stop service 
+  service: 
+    name: "minio"
+    state: stopped 
+  when: ansible_facts.services["minio.service"] is defined    
+  tags:
+    - install  
+
+- name: Configure minio.service
+  template:
+    src: "minio.service.j2"
+    dest: "/etc/systemd/system/minio.service"
+  tags:
+    - install
+
+- name: issue daemon-reload to pick up config changes
+  systemd:
+    daemon_reload: yes
+  tags:
+    - install  
+
+- name: enable service 
+  service: 
+    name: "minio"
+    enabled: yes
+    state: started
+  tags:
+    - install  
+
