--- a/roles/zookeeper/install/tasks/main.yml
+++ b/roles/zookeeper/install/tasks/main.yml
@@ -1,18 +1,18 @@
 ---
 # tasks file for install
 
-- name: Ensure group {{ mi_group}} exists
+- name: Ensure group {{ zk_group}} exists
   group:
-    name: "{{ mi_group}}"
+    name: "{{ zk_group}}"
     state: present
   tags:
     - install
 
-- name: Add the user {{ mi_user}}
+- name: Add the user {{ zk_user}}
   user:
-    name: "{{ mi_user}}"
-    comment: MINIO service user
-    group: "{{ mi_group}}"
+    name: "{{ zk_user}}"
+    comment: zookeeper service user
+    group: "{{ zk_group}}"
     shell: "/usr/sbin/nologin"
   tags:
     - install
@@ -20,52 +20,45 @@
 
 - name: create data directory
   file:
-    path: "{{ mi_data_path}}"
+    path: "{{ zk_data_path}}"
     state: directory
-    owner: "{{ mi_user }}"
-    group: "{{ mi_group }}"
+    owner: "{{ zk_user }}"
+    group: "{{ zk_group }}"
   tags:
     - install
 
 
-- name: create minio home directory
+- name: create zookeeper home directory
   file:
-    path: "{{ mi_home}}"
+    path: "{{ zk_home}}"
     state: directory
-    owner: "{{ mi_user}}"
-    group: "{{ mi_group}}"
+    owner: "{{ zk_user}}"
+    group: "{{ zk_group}}"
   tags:
     - install
 
 - name: create minio conf directory
   file:
-    path: "{{ mi_conf}}"
+    path: "{{ zk_conf}}"
     state: directory
-    owner: "{{ mi_user}}"
-    group: "{{ mi_group}}"
+    owner: "{{ zk_user}}"
+    group: "{{ zk_group}}"
   tags:
     - install
 
 - name: Copy file server
   copy:
-    src: "{{ local_install_dir}}/minio"
-    dest: "{{ mi_home}}"
-    owner: "{{ mi_user}}"
-    group: "{{ mi_group}}"
-    mode: "+x"
+    src: "{{ local_install_dir}}/kafka_2.13-{{ zookeeper_version }}.tgz"
+    dest: "/tmp"
+    owner: "{{ zk_user}}"
+    group: "{{ zk_group}}"
   tags:
     - install  
 
-- name: Copy file mc
-  copy:
-    src: "{{ local_install_dir}}/mc"
-    dest: "{{ mi_home}}/mc"
-    owner: "{{ mi_user}}"
-    group: "{{ mi_group}}"
-    mode: "+x"
-  tags:
-    - install  
-
+- name: Extract kafka into {{ zk_home}}
+  unarchive:
+    src: "/tmp/kafka_2.13-{{ zookeeper_version }}.tgz"
+    dest: "{{ zk_home}}"
 
 - name: Populate service facts
   service_facts:    
@@ -74,16 +67,16 @@
 
 - name: stop service 
   service: 
-    name: "minio"
+    name: "zookeeper"
     state: stopped 
-  when: ansible_facts.services["minio.service"] is defined    
+  when: ansible_facts.services["zookeeper.service"] is defined    
   tags:
     - install  
 
-- name: Configure minio.service
+- name: Configure zookeeper.service
   template:
-    src: "minio.service.j2"
-    dest: "/etc/systemd/system/minio.service"
+    src: "zookeeper.service.j2"
+    dest: "/etc/systemd/system/zookeeper.service"
   tags:
     - install
 
@@ -95,7 +88,7 @@
 
 - name: enable service 
   service: 
-    name: "minio"
+    name: "zookeeper"
     enabled: yes
     state: started
   tags:
