--- a/roles/kafka/requirements/tasks/main.yml
+++ b/roles/kafka/requirements/tasks/main.yml
@@ -1,2 +1,7 @@
 ---
 # tasks file for requirements
+- name: Install tar
+  yum:
+  delegate_to : localhost
+     name: "tar"
+     state: present        
