--- a/roles/zookeeper/install/handlers/main.yml
+++ b/roles/zookeeper/install/handlers/main.yml
@@ -1,2 +1,6 @@
 ---
-# handlers file for install
+# handlers file for configure
+- name: restart
+  service:
+    name: "zookeeper"
+    state: "restarted"
