--- a/roles/zookeeper/configure/tasks/main.yml
+++ b/roles/zookeeper/configure/tasks/main.yml
@@ -10,7 +10,7 @@
 - name: Configure server conf
   template:
     src: "zookeeper.properties.j2"
-    dest: "{{ zk_conf}}/bin/config/zookeeper.properties"
+    dest: "{{ zk_conf}}/zookeeper.properties"
   tags:
     - configure
 
