--- a/roles/zookeeper/configure/tasks/main.yml
+++ b/roles/zookeeper/configure/tasks/main.yml
@@ -4,6 +4,8 @@
   template:
     src: "myid.j2"
     dest: "{{ zk_data_path}}/myid"
+    owner: "{{ zk_user}}"
+    group: "{{ zk_group}}"
   tags:
     - configure
 
@@ -11,6 +13,8 @@
   template:
     src: "zookeeper.properties.j2"
     dest: "{{ zk_conf}}/zookeeper.properties"
+    owner: "{{ zk_user}}"
+    group: "{{ zk_group}}"
   tags:
     - configure
 
