--- a/inventories/singlenode.yml
+++ b/inventories/singlenode.yml
@@ -13,10 +13,11 @@ all: # keys must be unique, i.e. only one 'hosts' per group
         zookeeper:
             hosts:
                 node1:
-                    zk_id: 1
+                  zk_id: 1
         kafka:
             hosts:
                 node1:
+                  ka_broker_id: 1
         elastic:
             children:
             vars:
