--- a/inventories/singlenode.yml
+++ b/inventories/singlenode.yml
@@ -6,6 +6,7 @@ all: # keys must be unique, i.e. only one 'hosts' per group
         kbn_hostname: "kibana"
         es_clustername: singlenode
         mb_ingest: node1
+        ka_zk_hosts: "node1:2181"
     children:   # key order does not matter, indentation does
         minio:
             hosts:
