--- a/roles/kafka/uninstall/tasks/main.yml
+++ b/roles/kafka/uninstall/tasks/main.yml
@@ -1,2 +1,65 @@
 ---
 # tasks file for uninstall
+
+- name: Populate service facts
+  service_facts:    
+  tags:
+    - uninstall  
+
+- name: stop service 
+  service: 
+    name: kafka
+    state: stopped 
+  when: ansible_facts.services['kafka.service'] is defined    
+  tags:
+    - uninstall  
+
+- name: Remove the user {{ ka_user}}
+  user:
+    name: "{{ ka_user}}"
+    remove: "yes"
+    state: absent
+  tags:
+    - uninstall
+
+- name: Ensure group {{ ka_group}} is removed
+  group:
+    name: "{{ ka_group}}"
+    state: absent
+  tags:
+    - uninstall
+
+- name: Remove service file
+  file:
+    path: "/etc/systemd/system/kafka.service"
+    state: absent
+  tags:
+    - uninstall  
+
+- name: Recursively remove directory
+  file:
+    path: "{{ ka_home }}"
+    state: absent
+  tags:
+    - uninstall  
+
+- name: Recursively remove directory
+  file:
+    path: "{{ ka_conf }}"
+    state: absent    
+  tags:
+    - uninstall  
+
+- name: Recursively remove directory
+  file:
+    path: "{{ ka_data_path }}"
+    state: absent    
+  tags:
+    - uninstall  
+
+- name: Recursively remove directory
+  file:
+    path: "/home/{{ ka_user}}"
+    state: absent    
+  tags:
+    - uninstall  
