--- a/roles/java/uninstall/tasks/main.yml
+++ b/roles/java/uninstall/tasks/main.yml
@@ -3,7 +3,7 @@
 
 - name: Uninstall package.
   yum:
-     name: "java-11-openjdk"
+     name: "java-11-openjdk*"
      state: absent       
   tags:
     - uninstall  
