--- a/inventories/group_vars/kafka.yml
+++ b/inventories/group_vars/kafka.yml
@@ -3,5 +3,6 @@ ka_group: "kafka"
 ka_home: "/opt/kafka"
 ka_conf: "/etc/kafka"
 ka_port: "9092"
-ka_console_port: "9001"
+ka_port_repl: "9093"
 ka_data_path: "{{ mount_logical_volume}}/kafka"
+ka_config_file: "server.properties.j2"
