--- a/inventories/group_vars/zookeeper.yml
+++ b/inventories/group_vars/zookeeper.yml
@@ -3,5 +3,7 @@ zk_group: "zookeeper"
 zk_home: "/opt/zookeeper"
 zk_conf: "/etc/zookeeper"
 zk_port: "2181"
-zk_console_port: "9001"
+zk_port_mgt1: "2888"
+zk_port_mgt2: "3888"
 zk_data_path: "{{ mount_logical_volume}}/zookeeper"
+zk_config_file: "zookeeper.properties.j2"
