--- a/roles/kafka/firewall/tasks/main.yml
+++ b/roles/kafka/firewall/tasks/main.yml
@@ -7,3 +7,11 @@
     immediate: true
   tags:
     - firewall  
+
+- firewalld:
+    port: "{{ ka_port_repl}}/tcp"
+    permanent: true
+    state: enabled
+    immediate: true
+  tags:
+    - firewall  
