--- a/roles/zookeeper/configure/tasks/main.yml
+++ b/roles/zookeeper/configure/tasks/main.yml
@@ -11,7 +11,7 @@
 
 - name: Configure server conf
   template:
-    src: "zookeeper.properties.j2"
+    src: "{{ zk_config_file}}"
     dest: "{{ zk_conf}}/zookeeper.properties"
     owner: "{{ zk_user}}"
     group: "{{ zk_group}}"
