--- a/inventories/kafkacluster.yml
+++ b/inventories/kafkacluster.yml
@@ -1,6 +1,8 @@
 all: # keys must be unique, i.e. only one 'hosts' per group
     vars:
         ka_zk_hosts: "kafka1:2181,kafka2:2181,kafka3:2181"
+        ka_confile_file: "kafka-cluster.server.properties.j2"
+        zk_confile_file: "kafka-cluster.zookeeper.properties.j2"
     children:   # key order does not matter, indentation does
         zookeeper:
             hosts:
