--- a/inventories/kafkacluster.yml
+++ b/inventories/kafkacluster.yml
@@ -1,10 +1,10 @@
 all: # keys must be unique, i.e. only one 'hosts' per group
     vars:
         ka_zk_hosts: "kafka1:2181,kafka2:2181,kafka3:2181"
-        ka_confile_file: "kafka-cluster.server.properties.j2"
-        zk_confile_file: "kafka-cluster.zookeeper.properties.j2"
     children:   # key order does not matter, indentation does
         zookeeper:
+        vars:
+            zk_confile_file: "kafka-cluster.zookeeper.properties.j2"
             hosts:
                 kafka1:
                   zk_id: 1
@@ -13,6 +13,9 @@ all: # keys must be unique, i.e. only one 'hosts' per group
                 kafka3:
                   zk_id: 3
         kafka:
+          vars:
+              ka_zk_hosts: "kafka1:2181,kafka2:2181,kafka3:2181"
+              ka_confile_file: "kafka-cluster.server.properties.j2"
             hosts:
                 kafka1:
                   ka_broker_id: 1
