--- a/inventories/kafka-cluster.yml
+++ b/inventories/kafka-cluster.yml
@@ -7,23 +7,23 @@ all: # keys must be unique, i.e. only one 'hosts' per group
           hosts:
             kafka1:
               zk_id: 1
-              zk_config_file: "kafka-cluster.zookeeper.properties.j2"
+              zk_config_file: "kafka-cluster/zookeeper.properties.j2"
             kafka2:
               zk_id: 2
-              zk_config_file: "kafka-cluster.zookeeper.properties.j2"
+              zk_config_file: "kafka-cluster/zookeeper.properties.j2"
             kafka3:
               zk_id: 3
-              zk_config_file: "kafka-cluster.zookeeper.properties.j2"
+              zk_config_file: "kafka-cluster/zookeeper.properties.j2"
         kafka:
           vars:
             ka_zk_hosts: "kafka1:2181,kafka2:2181,kafka3:2181"
           hosts:
              kafka1:
                ka_broker_id: 1
-               ka_config_file: "kafka-cluster.server.properties.j2"
+               ka_config_file: "kafka-cluster/server.properties.j2"
              kafka2:
                ka_broker_id: 2
-               ka_config_file: "kafka-cluster.server.properties.j2"
+               ka_config_file: "kafka-cluster/server.properties.j2"
              kafka3:
                ka_broker_id: 3
-               ka_config_file: "kafka-cluster.server.properties.j2"
+               ka_config_file: "kafka-cluster/server.properties.j2"
