--- a/roles/elastic/ca/tasks/main.yml
+++ b/roles/elastic/ca/tasks/main.yml
@@ -46,13 +46,30 @@
     - ca
 
 
-- name: Change CA owner
-  ansible.builtin.file:
-    path: "/etc/elasticsearch/certs/{{ es_clustername }}.p12"
-    owner: elasticsearch
-    group: elasticsearch
+- name: Update xpack.security.transport.ssl.keystore.secure_password in keystore
+  ansible.builtin.command:
+    cmd: printf "{{es_clustername}}"| /usr/share/elasticsearch/bin/elasticsearch-keystore add xpack.security.transport.ssl.keystore.secure_password"
   tags:
     - ca
+
+- name: Update xpack.security.transport.ssl.truststore.secure_password in keystore
+  ansible.builtin.command:
+    cmd: printf "{{es_clustername}}"| /usr/share/elasticsearch/bin/elasticsearch-keystore add xpack.security.transport.ssl.truststore.secure_password"
+  tags:
+    - ca
+
+- name: Update xpack.security.http.ssl.keystore.secure_password in keystore
+  ansible.builtin.command:
+    cmd: printf "{{es_clustername}}"| /usr/share/elasticsearch/bin/elasticsearch-keystore add xpack.security.http.ssl.keystore.secure_password"
+  tags:
+    - ca
+
+- name: Update xpack.security.http.ssl.truststore.secure_password in keystore
+  ansible.builtin.command:
+    cmd: printf "{{es_clustername}}"| /usr/share/elasticsearch/bin/elasticsearch-keystore add xpack.security.http.ssl.truststore.secure_password"
+  tags:
+    - ca
+
 
 - name: Create node  cert
   ansible.builtin.command:
