--- a/roles/elastic/ca/tasks/main.yml
+++ b/roles/elastic/ca/tasks/main.yml
@@ -49,8 +49,11 @@
 - name: Update xpack.security.transport.ssl.keystore.secure_password in keystore
   ansible.builtin.command:
     cmd: printf "{{es_clustername}}"| /usr/share/elasticsearch/bin/elasticsearch-keystore add xpack.security.transport.ssl.keystore.secure_password
+    register: keystore
   tags:
     - ca
+
+- debug: var=keystore
 
 - name: Update xpack.security.transport.ssl.truststore.secure_password in keystore
   ansible.builtin.command:
